// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Theme: (entryDocument) should getUrls with custom entryDocument' 1`] = `
Array [
  "modules.md",
  "index.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md#constructor",
  "classes/breadcrumbs.Breadcrumbs.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespaceA.md",
  "classes/theme.namespaceA.SomeNestedClass.md",
  "classes/theme.namespaceA.SomeNestedClass.md#constructor",
  "modules/theme.namespaceB.md",
  "enums/theme.enumItemA.md",
  "enums/theme.enumItemB.md",
  "classes/theme.ClassItemA.md",
  "classes/theme.ClassItemA.md#constructor",
  "classes/theme.ClassItemB.md",
  "classes/theme.ClassItemB.md#constructor",
  "interfaces/theme.InterfaceItemA.md",
  "interfaces/theme.InterfaceItemA.md#prop",
  "interfaces/theme.InterfaceItemB.md",
  "interfaces/theme.InterfaceItemB.md#prop",
]
`;

exports[`Theme: (filenameSeparator) should getUrls with custom separator' 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs-Breadcrumbs.md",
  "classes/breadcrumbs-Breadcrumbs.md#constructor",
  "classes/breadcrumbs-Breadcrumbs.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme-namespaceA.md",
  "classes/theme-namespaceA-SomeNestedClass.md",
  "classes/theme-namespaceA-SomeNestedClass.md#constructor",
  "modules/theme-namespaceB.md",
  "enums/theme-enumItemA.md",
  "enums/theme-enumItemB.md",
  "classes/theme-ClassItemA.md",
  "classes/theme-ClassItemA.md#constructor",
  "classes/theme-ClassItemB.md",
  "classes/theme-ClassItemB.md#constructor",
  "interfaces/theme-InterfaceItemA.md",
  "interfaces/theme-InterfaceItemA.md#prop",
  "interfaces/theme-InterfaceItemB.md",
  "interfaces/theme-InterfaceItemB.md#prop",
]
`;

exports[`Theme: (getNavigation) should getNavigation for exports with readme=none' 1`] = `
Array [
  Object {
    "title": "Exports",
    "url": "README.md",
  },
  Object {
    "title": "Namespaces",
    "url": "",
  },
  Object {
    "title": "Enumerations",
    "url": "",
  },
  Object {
    "title": "Classes",
    "url": "",
  },
  Object {
    "title": "Interfaces",
    "url": "",
  },
]
`;

exports[`Theme: (getNavigation) should getNavigation for exports' 1`] = `
Array [
  Object {
    "title": "Readme",
    "url": "README.md",
  },
  Object {
    "title": "Exports",
    "url": "modules.md",
  },
  Object {
    "title": "Namespaces",
    "url": "",
  },
  Object {
    "title": "Enumerations",
    "url": "",
  },
  Object {
    "title": "Classes",
    "url": "",
  },
  Object {
    "title": "Interfaces",
    "url": "",
  },
]
`;

exports[`Theme: (getNavigation) should getNavigation for modules with readme=none' 1`] = `
Array [
  Object {
    "title": "Modules",
    "url": "",
  },
  Object {
    "title": "Namespaces",
    "url": "",
  },
  Object {
    "title": "Enumerations",
    "url": "",
  },
  Object {
    "title": "Classes",
    "url": "",
  },
  Object {
    "title": "Interfaces",
    "url": "",
  },
]
`;

exports[`Theme: (getNavigation) should getNavigation for modules' 1`] = `
Array [
  Object {
    "title": "Readme",
    "url": "README.md",
  },
  Object {
    "title": "Modules",
    "url": "",
  },
  Object {
    "title": "Namespaces",
    "url": "",
  },
  Object {
    "title": "Enumerations",
    "url": "",
  },
  Object {
    "title": "Classes",
    "url": "",
  },
  Object {
    "title": "Interfaces",
    "url": "",
  },
]
`;

exports[`Theme: (getNavigation) should getNavigation' 1`] = `
"{
 \\"title\\": \\"typedoc-plugin-markdown\\",
 \\"url\\": \\"\\",
 \\"isLabel\\": false,
 \\"children\\": [
  {
   \\"title\\": \\"Readme\\",
   \\"url\\": \\"README.md\\",
   \\"isLabel\\": false,
   \\"children\\": []
  },
  {
   \\"title\\": \\"Exports\\",
   \\"url\\": \\"modules.md\\",
   \\"isLabel\\": false,
   \\"children\\": []
  },
  {
   \\"title\\": \\"Namespaces\\",
   \\"url\\": \\"\\",
   \\"isLabel\\": true,
   \\"children\\": [
    {
     \\"title\\": \\"namespaceA\\",
     \\"url\\": \\"modules/namespaceA.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    },
    {
     \\"title\\": \\"namespaceB\\",
     \\"url\\": \\"modules/namespaceB.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    }
   ]
  },
  {
   \\"title\\": \\"Enumerations\\",
   \\"url\\": \\"\\",
   \\"isLabel\\": true,
   \\"children\\": [
    {
     \\"title\\": \\"enumItemA\\",
     \\"url\\": \\"enums/enumItemA.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    },
    {
     \\"title\\": \\"enumItemB\\",
     \\"url\\": \\"enums/enumItemB.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    }
   ]
  },
  {
   \\"title\\": \\"Classes\\",
   \\"url\\": \\"\\",
   \\"isLabel\\": true,
   \\"children\\": [
    {
     \\"title\\": \\"ClassItemA\\",
     \\"url\\": \\"classes/ClassItemA.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    },
    {
     \\"title\\": \\"ClassItemB\\",
     \\"url\\": \\"classes/ClassItemB.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    },
    {
     \\"title\\": \\"namespaceA.SomeNestedClass\\",
     \\"url\\": \\"classes/namespaceA.SomeNestedClass.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    }
   ]
  },
  {
   \\"title\\": \\"Interfaces\\",
   \\"url\\": \\"\\",
   \\"isLabel\\": true,
   \\"children\\": [
    {
     \\"title\\": \\"InterfaceItemA\\",
     \\"url\\": \\"interfaces/InterfaceItemA.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    },
    {
     \\"title\\": \\"InterfaceItemB\\",
     \\"url\\": \\"interfaces/InterfaceItemB.md\\",
     \\"isLabel\\": true,
     \\"children\\": []
    }
   ]
  }
 ]
}"
`;

exports[`Theme: (getUrls) should getUrls with 'allReflectionsHaveOwnDocument' set 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md#constructor",
  "classes/breadcrumbs.Breadcrumbs.md#somemethod",
  "modules/theme.md",
  "modules/theme.namespaceA.md",
  "classes/theme.namespaceA.SomeNestedClass.md",
  "classes/theme.namespaceA.SomeNestedClass.md#constructor",
  "modules/theme.namespaceB.md",
  "enums/theme.enumItemA.md",
  "enums/theme.enumItemB.md",
  "classes/theme.ClassItemA.md",
  "classes/theme.ClassItemA.md#constructor",
  "classes/theme.ClassItemB.md",
  "classes/theme.ClassItemB.md#constructor",
  "interfaces/theme.InterfaceItemA.md",
  "interfaces/theme.InterfaceItemA.md#prop",
  "interfaces/theme.InterfaceItemB.md",
  "interfaces/theme.InterfaceItemB.md#prop",
  "variables/theme.declarationItemA.md",
  "variables/theme.declarationItemB.md",
  "functions/theme.functionItemA.md",
  "functions/theme.functionItemB.md",
]
`;

exports[`Theme: (getUrls) should getUrls with readme 'none' 1`] = `
Array [
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md#constructor",
  "classes/breadcrumbs.Breadcrumbs.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespaceA.md",
  "classes/theme.namespaceA.SomeNestedClass.md",
  "classes/theme.namespaceA.SomeNestedClass.md#constructor",
  "modules/theme.namespaceB.md",
  "enums/theme.enumItemA.md",
  "enums/theme.enumItemB.md",
  "classes/theme.ClassItemA.md",
  "classes/theme.ClassItemA.md#constructor",
  "classes/theme.ClassItemB.md",
  "classes/theme.ClassItemB.md#constructor",
  "interfaces/theme.InterfaceItemA.md",
  "interfaces/theme.InterfaceItemA.md#prop",
  "interfaces/theme.InterfaceItemB.md",
  "interfaces/theme.InterfaceItemB.md#prop",
]
`;

exports[`Theme: (getUrls) should getUrls' 1`] = `
Array [
  "modules.md",
  "README.md",
  "modules/breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md",
  "classes/breadcrumbs.Breadcrumbs.md#constructor",
  "classes/breadcrumbs.Breadcrumbs.md#somemethod",
  "modules/theme.md",
  "modules/theme.md#declarationitema",
  "modules/theme.md#declarationitemb",
  "modules/theme.md#functionitema",
  "modules/theme.md#functionitemb",
  "modules/theme.namespaceA.md",
  "classes/theme.namespaceA.SomeNestedClass.md",
  "classes/theme.namespaceA.SomeNestedClass.md#constructor",
  "modules/theme.namespaceB.md",
  "enums/theme.enumItemA.md",
  "enums/theme.enumItemB.md",
  "classes/theme.ClassItemA.md",
  "classes/theme.ClassItemA.md#constructor",
  "classes/theme.ClassItemB.md",
  "classes/theme.ClassItemB.md#constructor",
  "interfaces/theme.InterfaceItemA.md",
  "interfaces/theme.InterfaceItemA.md#prop",
  "interfaces/theme.InterfaceItemB.md",
  "interfaces/theme.InterfaceItemB.md#prop",
]
`;
